--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "deno-test",
   "version": "1.0.0",
-  "main": "importPathUpdate.js",
+  "main": "",
   "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc || exit 0;",
+    "esbuild": "esbuild src/**/*.ts --outdir=dist --format=esm --platform=neutral --allow-overwrite",
+    "typecheck": "tsc || exit 0",
     "importPathUpdate": "node importPathUpdate.js",
     "nodeRun": "node ./src/index.ts | more",
-    "denoRun": "deno run ./src/index.ts | more",
+    "denoRun": "deno ./src/index.ts | more",
     "serverRun": "live-server",
-    "server": "pnpm run rmdir -- dist && pnpm run build && pnpm run importPathUpdate && pnpm run serverRun",
+    "server": "pnpm run typecheck && pnpm run rmdir -- dist && pnpm run esbuild && pnpm run importPathUpdate && pnpm run serverRun",
     "rmdir": "node -e \"var fs = require('fs'); try{process.argv.slice(1).map((fpath) => fs.rmdirSync(fpath, { recursive: true }))}catch(err){console.log(`Dist not found`)}; process.exit(0);\""
   },
   "author": "",
