added a config for eslint and js compilation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cypress": "^15.8.1"
+    "cypress": "^15.8.1",
+    "typescript-eslint": "^8.52.0"
   }
 }
