--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "cypress": "^15.8.1",
+    "eslint": "^9.39.2",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
   }
 }
